# ARSON-AL

./: .gitignore  0001-docs-Add-OPACK-to-Opaca-migration-planning.patch  CLAUDE.md  MIGRATION-RATIONALE.md  OPACK-TO-OPACA-MIGRATION-ROADMAP.md  PHASE-0-CHECKLIST.md  README.md  claude.md  startup.sh
.agents/skills/ARSON-AL/agents/: openai.yaml
.claude/: ecc-tools.json  identity.json
.claude/commands/: bones-only-spec-draft-workflow.md  spec-promotion-sync-workflow.md
.claude/homunculus/instincts/inherited/: ARSON-AL-instincts.yaml
.claude/hooks/: session-start.sh
.claude/skills/ARSON-AL/: SKILL.md
.codex/: AGENTS.md
.scaff/guild-hall/app-reference/: next.config.js  package.json
.scaff/ruv-fann/.claude-flow/: config.yaml  daemon-state.json
.scaff/ruv-fann/.claude-flow/metrics/: consolidation.json  v3-progress.json
.scaff/ruv-fann/docs/adr/: ADR-001-deserialization-safety.md  ADR-004-unified-error-types.md
.scaff/ruv-fann/examples/: basic_usage.rs  test_adam.rs  xor.rs
.scaff/synaptic-mesh/src/js/: ruv-swarm.POINTER.md
int/: CLAUDE.md  MANIFEST.yml  REVISE.md
int/DeTTECT/: PLACEMENT.md
int/awesome-bugbounty-tools/: INTEGRATION-TABLE.md
int/bofhound/: READ THE README
int/bofhound/bofhound-main/: .gitignore  CHANGELOG.md  pyproject.toml
int/bofhound/bofhound-main/tests/: test_localgroup_to_computer.py  test_session_to_computer.py
int/bofhound/bofhound-main/utilities/: convert_beacon_to_outflankc2.py  mythic_data_capture.py
int/mitre-attack/: INTEGRATION-TABLE.md  THISBIS
int/neuro-divergent/: CLAUDE.md  INTEGRATION PLAB
int/osint-tools/: hashtag_list.html
int/red-team-scripts/attack-mapping/: MERGE WITH
int/ruvn/research-pipeline/: INTEGRATION GUIDE  fact-checker.ts  scout.ts  source-grader.ts  synthesizer.ts  web-searcher.ts
int/shodansnipe/: CLAUDE.md  INTEGRATION PLAN
int/web3/: CLAUDE.md  bounty-platforms.md  on-chain-forensics.md  threat-intel-feeds.md
int/web3/lance/targets/: active-targets.md  cosmos-sdk-gov-audit.md  cosmos-sdk-staking-audit.md  cosmwasm-scan.md
ops/: CLAUDE.md  MANIFEST.yml  REVISE.md
ops/actors/engine/: LANGUAGE-CANDIDATES.md  OPACA.md  SWARM-ECS-SPEC.md
ops/actors/engine/kits/: CLAUDE.md  INDEX.txt  (+4 more)
ops/actors/engine/opack/examples/: CMakeLists.txt
ops/actors/engine/opack/examples/07_opaca_actor/: main.cpp
ops/actors/neural-bridge/: build-wasm-optimized-enhanced.sh  wasm-build.toml
ops/actors/opaca/: SPEC.md
ops/actors/opack/: ECS-CELLS.md
ops/actors/ruv-fann/: lib.rs
ops/dissolution/wave2/: DeTTECT.md  Scorpio.md  Synaptic-Mesh.md  advanced_evolution.md  guild-hall.md  loki-mode.md  red-team-scripts.md  ruvn.md
ops/gamification/guild-hall/: orchestration-methodology.md  security-headers-baseline.toml
ops/gaming/: REVISE.md  SPEC.md
ops/gaming/reward/: merge these
ops/gvt/std/: PATTERNS.md  research-methodology.md
ops/hyg/ast10/: api-documentation.md  ast02.md  ast03.md  ast05.md  proposal.md
ops/mem/: REVISE.md  advanced_evolution.POINTER.md
ops/mem/chains/: CLAUDE.md
ops/mem/neural-bridge/: .gitignore  Cargo.toml  LICENSE  PLACEMENT.md  ROLE.md  lib.rs  wasm-loader.js
ops/mem/neural-bridge/neural/: mod.rs
ops/mem/neural-bridge/wasm/: bridge.rs
ops/mem/synaptic-neural-mesh/: Cargo.toml
ops/optimizer/advanced_evolution/: PLACEMENT.md
ops/orchestration/loki-mode/: PLACEMENT.md
ops/standards/ast10/: .gitignore  README.md  ast04.md  ast06.md  ast07.md  ast08.md  ast09.md  checklist.md  mappings.md  skill-scanner-integration.md  solutions.md  top10.md
ops/std/: PATTERNS.md  research-methodology.md
ops/std/dissolution/: DUPLICATES.md  REORG.md  WAVE2-SUMMARY.md
ops/substrate/: LANGUAGE-CANDIDATES.md  OPACA.md  SWARM-ECS-SPEC.md
ops/substrate/neural-bridge/: README-neural-bridge.md  build-wasm-optimized.sh  build.rs  simd-config.rs  wasm-performance-benchmark.js
ops/substrate/opack/: CMakeLists.txt
ops/substrate/ruv-fann/: Cargo.toml  PLACEMENT.md
ops/substrate/synaptic-mesh/: PLACEMENT.md
paths/: CLAUDE.md  REVISE.md
paths/awesome-bugbounty-tools/: INTEGRATION-TABLE.md  README.md
picks/: CLAUDE.md  MANIFEST.yml  REVISE.md
picks/awesome-bugbounty-tools/: INTEGRATION-TABLE.md  README.md
picks/burp-extensions/: NEED BURP  README.md  SPEC.md
picks/c2-infrastructure/: setup_havoc_teamserver.yml
picks/fuzz-skill/: README.md  SKILL.md  crash-triage.md  fuzzing-toolchain.md
picks/fuzz-skill/test-vuln/: build.sh  vuln_parser.c  vuln_parser_afl_asan  vuln_parser_asan  vuln_parser_cov  vuln_parser_libfuzzer  vuln_parser_msan  vuln_parser_prod
picks/ssti-research/: Payloads.md  README.md
picks/web3/: CLAUDE.md  evm-fuzzers.md
probes/: CLAUDE.md  MANIFEST.yml  REVISE.md
probes/awesome-bugbounty-tools/: INTEGRATION PLAN  INTEGRATION-TABLE.md  README.md
probes/drogonsec/: .drogonsec.yaml  .golangci.yml  Dockerfile  LICENSE  Makefile  README.md  go.mod  go.sum
probes/drogonsec/configs/: ai.yaml.example
probes/drogonsec/docs/: ai-remediation.md  branch-monitoring.md  ci-cd.md  faq.md  index.md  installation.md  modules.md  security.md  usage.md
probes/guild-hall/secret-detection/: SECRETS-SCAN-REPORT.md
probes/scorpio/: PLACEMENT.md
probes/scorpio/llm-sast/: gemini-prompts.ts
probes/scorpio/ui-reference/: README.md
probes/shodansnipe/: CLAUDE.md
probes/vigolium/: HACKING.md  README.md
probes/vigolium/test/: goreleaser-full.yaml
probes/web3/: CLAUDE.md  sast-tools.md
proofs/: CLAUDE.md  MANIFEST.yml  REVISE.md  SYSADLOG.md
proofs/ruvn/dossier-generation/: citer.ts
proofs/scorpio/llm-report-generation/: finding-schema.ts
proofs/web2/bug-reaper/: SKILL.md
proofs/web3/: CLAUDE.md  audit-reports.md  ctf-environments.md
proofs/web3/lance/: SKILL.md
(+2230 files in other folders)
